--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :password_digest, style: "display: block" %>
-    <%= form.text_field :password_digest %>
+    <%= form.label :password_diget, style: "display: block" %>
+    <%= form.password_field :password_digest %>
   </div>
 
   <div>
