--- a/app/views/pharmacy_orders/_form.html.erb
+++ b/app/views/pharmacy_orders/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_with(model: [@pharmacy_order.pharmacy, @pharmacy_order]) do |form| %>
     <% if pharmacy_order.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(bid.errors.count, "error") %> prohibited this bid from being saved:</h2>
+        <h2><%= pluralize(pharmacy_order.errors.count, "error") %> prohibited this bid from being saved:</h2>
   
         <ul>
-          <% bid.errors.each do |error| %>
+          <% pharmacy_order.errors.each do |error| %>
             <li><%= error.full_message %></li>
           <% end %>
         </ul>
@@ -20,7 +20,7 @@
   
     <div>
       <%= form.label :amount, style: "display: block", class: 'govuk-label' %>
-      <%= form.text_field :amount, class: "govuk-input govuk-!-width-one-half", required: true %>
+      <%= form.number_field :amount, class: "govuk-input govuk-!-width-one-half", required: true %>
     </div>
   
     <div>
