--- a/app/views/public/customer_orders.html.erb
+++ b/app/views/public/customer_orders.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Create Order", new_customer_customer_order_path(session[:id]), class:"govuk-button"%>
 <table class="govuk-table">
   <caption class="govuk-table__caption govuk-table__caption--m">Dates and amounts</caption>
   <thead class="govuk-table__head">
