--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,8 +1,6 @@
 footer {
-    position: absolute;
-    bottom: 0;
-    margin-top: auto;
-    width: 100vw;
+margin-top: 10vh ;
+width: 100vw;
 }
 
 .logout {
